--- a/project/package.json
+++ b/project/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "eslint": "8.22.0",
+    "flowbite": "^1.5.3",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -49,7 +51,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-native": "^4.0.0",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.1"
