--- a/project/package.json
+++ b/project/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "tw-elements": "^1.0.0-alpha12",
     "typescript": "^4.8.4",
