--- a/project/package.json
+++ b/project/package.json
@@ -10,13 +10,17 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "axios": "^1.1.3",
     "eslint": "8.22.0",
     "flowbite": "^1.5.3",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
+    "react-token-auth": "^2.3.8",
     "tw-elements": "^1.0.0-alpha12",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
